Fixed IE overflow for the sidebar md-content

--- a/less/components/sidebars.less
+++ b/less/components/sidebars.less
@@ -4,6 +4,8 @@ md-sidenav.@{theme-cls}.md-sidenav-right {
   md-content {
     background-color: inherit;
     padding: 10px 12px;
+    overflow: hidden;
+    overflow-y: auto;
   }
 
   .card-title {
